--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Numeric Sequence Calculator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
 			<h1>Numeric Sequence Calculator</h1>
 		</header>
 		<section id="instructions">
-			<p></p>
+			<h2>Instructions</h2>
 			<ul>
 				<li>The calculator accepts positive, whole numbers only.</li>
 			</ul>
 		</section>
-		<section>
-			<p>Options</p>
+		<section id="description">
+			<h2>Number Sequences</h2>
 			<dl>
 				<dt>Natural Numbers</dt>
 				<dd>All numbers up to and including the number entered.</dd>
@@ -35,8 +36,16 @@
 				</dd>
 				<dd>Fibonacci Sequence</dd>
 				<dt>All fibonacci numbers up to and including the number entered.</dt>
-			</dl>			
+			</dl>
 		</section>
+		<section>
+			<div id="calculator-input">
+				<input></input>
+				<button>Calculate</button>
+			</div>
+		</section>
+		<output>
+		</output>
 	</body>
 </html>
 		
