--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>Numeric Sequence Calculator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script type="text/javascript" src="app.js"></script>
 	</head>
 	<body>
 		<header>
@@ -44,7 +46,7 @@
 				<button>Calculate</button>
 			</div>
 		</section>
-		<output>
+		<output id="result">
 		</output>
 	</body>
 </html>
