Added naturalNumbers sequence

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		</section>
 		<section>
 			<div id="calculator-input">
-				<input></input>
-				<button>Calculate</button>
+				<input id="number"></input>
+				<button id="calculate">Calculate</button>
 			</div>
 		</section>
 		<output id="result">
